<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!-- In the following LinearLayout,
         the "layout_height" attribute needs to wrap_content
         together with "fitsSystemWindows" set to true.
         This, combined with "windowSoftInputMode" set to "adjustResize"
         in the AndroidManifest, allows the window to correctly scroll
         to a text field while resizing the activity window
         so that the text field is not obscured by the soft keyboard.
         -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:fitsSystemWindows="true"
        >
        <!-- To change an EditText background, add the attribute
             android:background="@drawable/rounded_rectangle" -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />
        <!-- The domain -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_domain"
            android:fontFamily="@string/label_fontFamily"
            android:textAllCaps="true"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_domain"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />
        <!-- THE user password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:fontFamily="@string/label_fontFamily"
            android:textAllCaps="true"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />
        <!-- The number of iterations -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_iterations"
            android:fontFamily="@string/label_fontFamily"
            android:textAllCaps="true"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/iterations"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_iterations"
            android:inputType="number"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />
        <!-- The Proxy Password
             No hint; greyed on wake -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_hash"
            android:fontFamily="@string/label_fontFamily"
            android:textAllCaps="true"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/hash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
        <CheckBox
            android:id="@+id/showHash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_showHash"
            android:textStyle="italic"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />
        <CheckBox
            android:id="@+id/truncate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_truncate"
            android:fontFamily="@string/label_fontFamily"
            android:textAllCaps="true"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/truncation"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_truncation"
            android:inputType="number"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />
        <CheckBox
            android:id="@+id/saveAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_saveAttributes"
            android:textStyle="italic"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <!-- The "Generate" button.
             An "onClick" attribute defined here will
             expect the corresponding callback to be defined
             within the main enacpsulating activity,
             not the fragment for which we are defining this layout.
             Hence, for the purposes of design, we will declare
             the callback in teh codez instead. -->
        <Button
            android:id="@+id/generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_generate"
            android:fontFamily="@string/button_fontFamily"
            />
    </LinearLayout>
</ScrollView>
