<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!-- In the following LinearLayout,
         the "layout_height" attribute needs to wrap_content
         together with "fitsSystemWindows" set to true.
         This, combined with "windowSoftInputMode" set to "adjustResize"
         in the AndroidManifest, allows the window to correctly scroll
         to a text field while resizing the activity window
         so that the text field is not obscured by the soft keyboard.
         -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:fitsSystemWindows="true"
        >

        <!-- A checkbox to "unlock" the salt key,
             allowing operations like generating a new one,
             or loading an existing one from a file.
             This is to prevent accidental regenerations of the key. -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />
        <CheckBox android:id="@+id/unlockSaltKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_unlockSaltKey"
            android:textStyle="italic"
            />

        <!-- The salt key 
             The EditText view for the salt key
             is multiline -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_saltKey"
            android:fontFamily="@string/label_fontFamily"
            android:textAllCaps="true"
            android:textStyle="bold"
            />
        <EditText android:id="@+id/saltKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:minLines="5"
            android:maxLines="5"
            android:gravity="top|left"
            android:scrollbars="vertical"
            android:hint="@string/hint_saltKey"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <!-- The "Load Salt Key" Button -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />
        <Button android:id="@+id/loadSaltKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_loadSaltKey"
            android:fontFamily="@string/button_fontFamily"
            android:onClick="loadSaltKey"
            />

        <!-- The "Generate Salt Key" Button -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />
        <Button android:id="@+id/generateSaltKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_generateSaltKey"
            android:fontFamily="@string/button_fontFamily"
            android:onClick="generateSaltKey"
            />
    </LinearLayout>
</ScrollView>
